# ChangeLog for app-i18n/scim
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim/ChangeLog,v 1.23 2004/07/17 10:55:44 usata Exp $

  17 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> scim-0.9.7.ebuild,
  -scim-0.99.1.ebuild, -scim-0.99.2.ebuild, scim-0.99.3.ebuild:
  Marked 0.9.7 stable. Removed old testing ebuilds.

*scim-0.99.3 (14 Jul 2004)

  14 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> +scim-0.99.3.ebuild:
  Version bumped.

*scim-0.99.2 (01 Jul 2004)

  01 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> scim-0.99.0.ebuild,
  scim-0.99.2.ebuild:
  Version bumped.

  27 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> scim-0.9.6.ebuild,
  scim-0.9.7.ebuild, scim-0.99.0.ebuild, scim-0.99.1.ebuild:
  Block scim-cvs

*scim-0.99.1 (26 Jun 2004)

  26 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> -scim-0.8.2.ebuild,
  +scim-0.99.1.ebuild:
  Version bumped. Added to ~alpha. Removed old ebuild.

*scim-0.99.0 (21 Jun 2004)

  21 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> +scim-0.99.0.ebuild,
  -scim-0.99.0_pre20040614.ebuild, -scim-0.99.0_pre20040616.ebuild,
  -scim-0.99.0_pre20040619.ebuild, -scim-0.99.0_pre20040620.ebuild:
  Version bumped. Ebuilds cleanup.

*scim-0.99.0_pre20040620 (21 Jun 2004)

  21 Jun 2004; Mamoru KOMACHI <usata@gentoo.org>
  +scim-0.99.0_pre20040620.ebuild:
  Updated CVS snapshot

*scim-0.99.0_pre20040619 (20 Jun 2004)

  20 Jun 2004; Mamoru KOMACHI <usata@gentoo.org>
  scim-0.99.0_pre20040619.ebuild:
  Updated CVS snapshot

*scim-0.99.0_pre20040616 (17 Jun 2004)

  17 Jun 2004; Mamoru KOMACHI <usata@gentoo.org>
  scim-0.99.0_pre20040616.ebuild:
  Updated CVS snapshot

*scim-0.99.0_pre20040614 (15 Jun 2004)

  15 Jun 2004; Mamoru KOMACHI <usata@gentoo.org>
  +scim-0.99.0_pre20040614.ebuild:
  Added CVS snapshot needed for scim-m17n and scim-uim.

*scim-0.9.7 (15 Jun 2004)

  15 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> +scim-0.9.7.ebuild:
  Version bumped.
