@@ -1,9 +1,11 @@
 MD5 dcf626221ffc7742b7a5c83803cfd430 scim-0.9.7.ebuild 2151
 MD5 6be93d372f0183d36edea6f62a59859b scim-0.99.3.ebuild 2699
-MD5 8881cc3070630abf36aaf5824a0607fd ChangeLog 3820
+MD5 d1c896d4f09447333bc047d76dcf27b5 ChangeLog 3937
 MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
+MD5 412003e09f15c3a56a5f5252fdb61dd7 scim-0.99.4.ebuild 2699
 MD5 888d812cdfbd8ef63b506aae9acffc41 scim-0.9.6.ebuild 2136
 MD5 95e4d06699356649f034690e3c3e870e files/scim-0.6.1-gtk2immodule.patch 545
 MD5 4b50ec45c69e938123b22d03e8049859 files/digest-scim-0.9.7 63
+MD5 cad55398c8797ef251c08810752d1c8e files/digest-scim-0.99.4 64
 MD5 b71588a9e8ece4902533e78661265621 files/digest-scim-0.99.3 64
 MD5 04cde4e146722fc34da8aa1c56c1b2e0 files/digest-scim-0.9.6 63
